<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="welcome_title">こんにちは</string>
    <string name="welcome_message">FirstAppへようこそ。続行するにはログインしてください。</string>
    <string name="btn_login">ログイン</string>
    <string name="btn_logout">ログアウト</string>
    <string name="error_network">ネットワークエラーです。もう一度お試しください。</string>
    <string name="login_success">ログインに成功しました！</string>
    <string name="select_language">言語を選択</string>
    <string name="english">英語</string>
    <string name="vietnamese">ベトナム語</string>
    <string name="app_name" translatable="false">Multi Language Passive</string>
    <string name="japanese">日本語</string>
    <string name="time" translatable="false">00:00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
